# ai-org-blueprint

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.claude-runner  LICENSE  Makefile  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml
agents/: __init__.py
agents/ceo/: agent.py
agents/engineer/: agent.py
agents/finance/: agent.py
agents/marketing/: agent.py
agents/operations/: agent.py
agents/product/: agent.py
agents/sales/: __init__.py  agent.py
claude_runner/: main.py
core/agents/runners/: __init__.py  api_runner.py  base.py  claude_code_runner.py  mock_runner.py
core/brain/: __init__.py  api.py  schema.sql  service.py
core/observability/: metrics.py
core/orchestrator/: __init__.py  agent_loop.py
docs/: architecture.md  dual-runner-pattern.md  observability.md
docs/adr/: 0001-architecture-overview.md  0002-brain-as-shared-state.md  0003-pluggable-runner-pattern.md
examples/ceo-engineer-delegation/: README.md  run.py
examples/cron-proactive-dispatch/: README.md  run.py
examples/memory-namespaces/: README.md  run.py
scripts/: approve_action.py  init_brain.py  mock_llm_server.py  scrub_check.py  seed_demo.py
tests/: test_brain.py  test_orchestrator.py
tools/: base.py  registry.py
tools/implementations/: __init__.py  message_agent_tool.py  record_episode_tool.py  remember_tool.py
